# gitc-cli

./: README.md  pyproject.toml
gitc/: __main__.py
