[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitc-cli"
version = "0.1.0"
description = "Enhanced Git CLI wrappers for productivity"
readme = "README.md"
license = {text = "MIT"}
authors = [{ name = "GayathriP" }]
requires-python = ">=3.8"
dependencies = ["typer[all]"]

[project.scripts]
gitc = "gitc.__main__:app"
